--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/themes": "^3.0.2",
     "@stitches/react": "^1.2.8",
     "keen-slider": "^6.8.6",
-    "next": "14.1.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.1.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "stripe": "^14.24.0"
   },
   "devDependencies": {
