--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@stitches/react": "^1.2.8",
+    "axios": "^1.6.8",
     "keen-slider": "^6.8.6",
     "next": "^14.1.4",
     "react": "^18.2.0",
@@ -17,7 +18,6 @@
     "stripe": "^14.24.0"
   },
   "devDependencies": {
-    "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
